# pyDynamic

./: README.md  Untitled.ipynb  calcEprice.ipynb  pyproject.toml  readFluvius.py  scratch.ipynb
pydynamic/pydynamic/: pydynamic.py
