[tool.poetry]
name = "pydynamic"
version = "0.1.0"
description = ""
authors = ["Marc <marcameys@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.2.5"
pandas = "^2.2.2"
lxml = "^5.3.0"
entsoe-py = "^0.6.8"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
